--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -41,3 +41,23 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test
+      
+  deploy:
+    needs: build # Will only run if the test job succeeds
+    if: github.ref == 'refs/heads/main' # Only run this job if it is on the master branch
+  
+    runs-on: ubuntu-latest
+  
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: main # Checkout out master instead of the latest commit
+          fetch-depth: 0 # Checkout the whole branch
+  
+      - uses: mhanberg/gigalixir-action@v0.4.0
+        with:
+          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
+          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
+          GIGALIXIR_APP: goreviewapp # Feel free to also put this in your secrets
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          MIGRATIONS: true  # defaults to true
