--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -53,6 +53,10 @@ jobs:
         with:
           ref: main # Checkout out master instead of the latest commit
           fetch-depth: 0 # Checkout the whole branch
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.1
   
       - uses: mhanberg/gigalixir-action@v0.6.1
         with:
